--- a/smallscreen.css
+++ b/smallscreen.css
@@ -1,5 +1,5 @@
 #top-nav {
-  padding: 1.4em;
+  margin-top: 1em;
 }
 
 #name {
